fixed header wrapping

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,8 @@ ul {
 }
 .header {
     background-color: black;
-    color: white
+    color: white;
+    White-space: nowrap
 }
 .subheader {
     font-size: 1.2rem;
